--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "react-thumbnail": "^1.0.0",
     "web-vitals": "^3.1.0"
   },
   "scripts": {
