Added Routes and Created Streaming Page

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "react-thumbnail": "^1.0.0",
     "web-vitals": "^3.1.0"
