--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "core-js": "^3.29.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "fs": "0.0.1-security",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "mongoose-browser": "^5.2.8-pre-2",
